實驗前人作法
Mentions: #1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: "3.0"
 services:
   skcom:
     build: .
+    environment:
+      - DISPLAY=:1
+      - WINEARCH=win32
     command:
-      - 'python3'
-      - 'start.py'
+      - /usr/bin/supervisord
