修正 supervisor 問題
* 補上 supervisor 安裝
* 更正 supervisor 設定值
* CRLF 改為 LF

Mentions: #1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,9 @@ services:
   skcom:
     build: .
     environment:
-      - DISPLAY=:1
+      - DISPLAY=:0
       - WINEARCH=win32
+    ports:
+      - 5900:5900
     command:
       - /usr/bin/supervisord
