--- a/supervisord.conf
+++ b/supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:X11]
-command=/usr/bin/Xvfb :0 -screen 0 1024x768x24
+command=/usr/bin/Xvfb :0 -screen 0 800x600x16
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
@@ -15,23 +15,16 @@ stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
-#[program:novnc]
-#command=/root/novnc/utils/launch.sh --vnc localhost:5900 --listen 8080
+[program:icewm]
+command=/usr/bin/icewm
+autorestart=true
+stdout_logfile=/dev/fd/1
+stdout_logfile_maxbytes=0
+redirect_stderr=true
+
+#[program:explorer]
+#command=/opt/wine-stable/bin/wine /opt/wine-stable/lib/wine/explorer.exe
 #autorestart=true
 #stdout_logfile=/dev/fd/1
 #stdout_logfile_maxbytes=0
 #redirect_stderr=true
-
-[program:explorer]
-command=/opt/wine-stable/bin/wine /opt/wine-stable/lib/wine/explorer.exe
-autorestart=true
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
-redirect_stderr=true
-
-[program:fluxbox]
-command=/usr/bin/fluxbox
-autorestart=true
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
-redirect_stderr=true
