Window Manager 變更為 JWM
Mentions: #1

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -15,8 +15,8 @@ stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
 redirect_stderr=true
 
-[program:icewm]
-command=/usr/bin/icewm
+[program:jwm]
+command=/usr/bin/jwm -display :0
 autorestart=true
 stdout_logfile=/dev/fd/1
 stdout_logfile_maxbytes=0
