解決 mono, gecko 自動搜尋問題
* 改回 icewm
* 使用 skbot 啟動各項服務
* mono, gecko 放到有效目錄
* 增加 cabextract 與 vim 套件
* 增加 rebuild.sh, reset.sh, synctime.ps 加速研究

Mentions: #1

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,30 +1,33 @@
 [supervisord]
-nodaemon=true
+#nodaemon = true
+user = root
+pidfile = /root/supervisord.pid
+environment = WINEARCH="win32",DISPLAY=":0"
 
 [program:X11]
-command=/usr/bin/Xvfb :0 -screen 0 800x600x16
-autorestart=true
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
-redirect_stderr=true
+command = /usr/bin/Xvfb :0 -screen 0 800x600x16
+priority = 1
+autorestart = true
+user = skbot
+stdout_logfile = /dev/fd/1
+stdout_logfile_maxbytes = 0
+redirect_stderr = true
+
+[program:icewm]
+command = /usr/bin/icewm
+priority = 2
+autorestart = true
+user = skbot
+directory = /home/skbot
+stdout_logfile = /dev/fd/1
+stdout_logfile_maxbytes = 0
+redirect_stderr = true
 
 [program:x11vnc]
-command=/usr/bin/x11vnc -noxrecord
-autorestart=true
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
-redirect_stderr=true
-
-[program:jwm]
-command=/usr/bin/jwm -display :0
-autorestart=true
-stdout_logfile=/dev/fd/1
-stdout_logfile_maxbytes=0
-redirect_stderr=true
-
-#[program:explorer]
-#command=/opt/wine-stable/bin/wine /opt/wine-stable/lib/wine/explorer.exe
-#autorestart=true
-#stdout_logfile=/dev/fd/1
-#stdout_logfile_maxbytes=0
-#redirect_stderr=true
+command = /usr/bin/x11vnc -noxrecord -rfbauth /home/skbot/.vnc/passwd
+priority = 3
+autorestart = false
+user = skbot
+stdout_logfile = /dev/fd/1
+stdout_logfile_maxbytes = 0
+redirect_stderr = true
