實驗 Ubuntu 18~20, Debian buster 的問題
Mentions: #1

--- a/supervisord-bg.conf
+++ b/supervisord-bg.conf
@@ -14,10 +14,11 @@ stdout_logfile_maxbytes = 0
 redirect_stderr = true
 
 [program:icewm]
-command = /usr/bin/icewm
+# 注意!!
+# 需要使用 su -l 的方式切換, 否則開啟 terminal 會有使用者錯亂問題
+command = su -l skbot -c '/usr/bin/icewm'
 priority = 2
 autorestart = true
-user = skbot
 directory = /home/skbot
 stdout_logfile = /dev/fd/1
 stdout_logfile_maxbytes = 0
