--- a/tested/Dockerfile.u18
+++ b/tested/Dockerfile.u18
@@ -1,4 +1,4 @@
-FROM ubuntu:eoan
+FROM ubuntu:bionic
 
 # 先把套件庫切換到國網中心加速
 # ==========================
@@ -23,7 +23,9 @@ RUN sed -i 's/\(security\|archive\).ubuntu.com/free.nchc.org.tw/' /etc/apt/sourc
     dpkg --add-architecture i386 && \
     apt-get update
 
-# 設定時區
+# 搞定時區問題
+# ===========
+# 安裝 software-properties-common 會互動式詢問時區設定, 先處理好就沒事
 
 RUN export DEBIAN_FRONTEND=noninteractive && \
     apt-get install tzdata && \
@@ -31,52 +33,57 @@ RUN export DEBIAN_FRONTEND=noninteractive && \
     dpkg-reconfigure -f noninteractive tzdata
 
 # 安裝相依套件
+# ===========
 
 RUN apt-get install -y \
     wget gnupg2 supervisor software-properties-common \
     xvfb x11vnc xdotool \
     cabextract vim
 
-# 安裝 Wine Stable
+# 增加 WineHQ 的 PPA
+# =======================
+# 這裡需要用到 wget gnupg2
 
-RUN wget -O - https://dl.winehq.org/wine-builds/winehq.key | apt-key add - && \
-    add-apt-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ eoan main' && \
+RUN wget -O - https://dl.winehq.org/wine-builds/winehq.key | apt-key add -
+
+# 安裝 Wine Stable
+# ================
+# 這裡需要用到 software-properties-common
+# apt-get install -y --install-recommends winehq-stable
+
+RUN add-apt-repository 'deb https://dl.winehq.org/wine-builds/ubuntu/ bionic main' && \
     apt-get update && \
     apt-get install -y winehq-stable
 
-# 安裝 IceWM Window Manager
-
+# JWM Window Manager
+# 跟其他 X Server 相關套件分開安裝, 方便切換
 RUN apt-get install -y icewm
 
-# skbot 使用者設定
-
+# 建立一個 skbot 使用者, 設定需要的環境變數
 RUN useradd -m -r -p "" -s /bin/bash skbot && \
     su -l skbot -c 'echo "" >> .bashrc' && \
-    su -l skbot -c 'echo "export DISPLAY=:0" >> .profile' && \
-    su -l skbot -c 'echo "export WINEARCH=win32" >> .profile' && \
-    su -l skbot -c 'echo "export PATH=\$PATH:/opt/wine-stable/bin" >> .profile' && \
-    su -l skbot -c 'wget -nv https://dl.winehq.org/wine/wine-mono/4.9.4/wine-mono-4.9.4.msi' && \
-    su -l skbot -c 'wget -nv https://dl.winehq.org/wine/wine-gecko/2.47.1/wine-gecko-2.47.1-x86.msi' && \
+    su -l skbot -c 'echo "export DISPLAY=:0" >> .bashrc' && \
+    su -l skbot -c 'echo "export WINEARCH=win32" >> .bashrc'
+
+# 預載 winboot 會靠妖的套件
+# ========================
+# 這些需要實驗是否可以在 wineboot 執行前先預裝好
+# 假如實驗無效, 那就需要用 xdotool 模擬人工安裝, 或是乾脆按不裝
+# 注意!! mono 與 gecko 的版本必須要匹配 wine stable 才有作用, 否則還是會進入互動式安裝
+# 不過假如下載流程沒進行 MD5 驗證的話, 也許可以用改檔名的方式騙過去
+
+RUN su -l skbot -c 'wget -nv https://dl.winehq.org/wine/wine-mono/4.7.5/wine-mono-4.7.5.msi' && \
+    su -l skbot -c 'wget -nv https://dl.winehq.org/wine/wine-gecko/2.47/wine_gecko-2.47-x86.msi' && \
+    su -l skbot -c 'wget -nv https://dl.winehq.org/wine/wine-gecko/2.47/wine_gecko-2.47-x86_64.msi' && \
     su -l skbot -c 'wget -nv https://raw.githubusercontent.com/Winetricks/winetricks/master/src/winetricks' && \
     su -l skbot -c 'mkdir -p .cache/wine' && \
     su -l skbot -c 'mv *.msi .cache/wine' && \
-    su -l skbot -c 'chmod +x winetricks' && \
-    su -l skbot -c 'mkdir .vnc' && \
+    su -l skbot -c 'chmod +x winetricks'
+
+# 隨便設定 VNC 密碼
+RUN su -l skbot -c 'mkdir .vnc' && \
     su -l skbot -c 'x11vnc -storepasswd 0000 .vnc/passwd'
 
-# supervisord 設定
-ADD supervisord-bg.conf /root/supervisord-bg.conf
-ADD supervisord-fg.conf /root/supervisord-fg.conf
-ADD waitwm.sh /root/waitwm.sh
-
-# 建置 wine 環境
-# TODO: wineboot --init 之後無法安裝 Python 3.8.3
-
-RUN supervisord -c /root/supervisord-bg.conf && \
-    chmod +x /root/waitwm.sh && \
-    bash /root/waitwm.sh && \
-    su -l skbot -c 'wget -nv https://www.python.org/ftp/python/3.8.3/python-3.8.3.exe' && \
-    echo "Initialize wine environment for user skbot ..." && \
-    su -l skbot -c 'wineboot --init' && \
-    sleep 3 && \
-    kill `cat /root/supervisord.pid`
+# 變更 supervisord 設定
+ADD supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+ADD supervisord.conf /root/supervisord.conf
